Change header dhcpd.conf file.

--- a/dhcpd/files/dhcpd.conf
+++ b/dhcpd/files/dhcpd.conf
@@ -1,7 +1,4 @@
-# dhcpd.conf
-#
-# SaltStack-generated configuration file for ISC dhcpd
-#
+### File managed by Salt ###
 
 # option definitions common to all supported networks...
 {% if salt['pillar.get']('dhcpd:domain_name', False) -%}
